--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -14,6 +14,21 @@
     <span id="email-errors" class="errors"></span>
     <br>
 
+    <label class="label" for="skill">Skill</label>
+    <input type="text" name="user[skill]" placeholder="e.g., 'Ruby(technical'" value="<%= @user.skill %>">
+
+    <br>
+
+    <label class="label" for="skill">Years of Experience</label>
+    <input type="text" name="user[years_experience]" placeholder="e.g., '4'" value="<%= @user.skill %>">
+
+    <br>
+
+    <label class="label" for="skill">Formal Training?</label>
+    <input type="text" name="user[formal_training]" placeholder="e.g., Yes/No'" value="<%= @user.skill %>">
+
+    <br>
+
     <label class="label" for="password">Password</label>
     <input type="password" name="user[password]" placeholder="6 or more characters">
     <span id="entered_password-errors" class="errors"></span>    
